--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 body {
     background-image: url(images/background.png);
     background-position: top right;
-    background-size: cover;
+    background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
     margin: 0px;
-    height: 100vh;
+    overflow: hidden;
 }
 
 .red-flower {
@@ -34,7 +34,7 @@ body {
 }
 
 .yellow-tab-adjust{
-    height: 450px;
+    height: 2vw;
     margin-top: 600px;
     margin-left: 30px;
     z-index: 3;
@@ -42,14 +42,82 @@ body {
 }
 
 .yellow-tab{
-    height: 50px;
+    height: 10vw;
     z-index: 3;
     margin-left: 0px;
     display: flex;
 }
 
-.text-testing{
+.text-test {
+    margin-left: 500px;
+
+    z-index: 4
+}
+
+.yellow-flower{
+    height: 20px;
+    margin-top: 870px;
+    margin-left: 120px;
     display: flex;
-    margin-top: 650px;
-    margin-left:
+}
+
+.yellow-flower-adjust {
+    height: 200px
+}
+
+.heart-adjust{
+    height: 70px;
+}
+
+.heart{
+    margin-top: 800px;
+    margin-left: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 2px
+}
+
+.boxes {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+
+.one{
+    border: solid 10px #A68E6A;
+    width: 300px;
+    height: 300px;
+    justify-content: space-between;
+    margin: 20px;
+    border-radius: 15px;
+}
+
+.two {
+    border: solid 10px #A68E6A;
+    width: 300px;
+    height: 300px;
+    justify-content: space-between;
+   margin: 20px;
+   border-radius: 15px;
+}
+
+.three{
+    border: solid 10px #A68E6A;
+    width: 300px;
+    height: 300px;
+    justify-content: space-between;
+    margin: 20px;
+    border-radius: 15px;
+
+}
+
+.four {
+    border: solid 10px #A68E6A;
+    width: 300px;
+    height: 300px;
+    justify-content: space-between;
+    margin: 20px;
+    border-radius: 15px;
 }
