--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ body {
 .yellow-flower{
     height: 20px;
     margin-top: 870px;
-    margin-left: 120px;
+    margin-left: 60px;
     display: flex;
 }
 
@@ -77,12 +77,40 @@ body {
     padding: 2px
 }
 
+.arrow-left {
+    border: solid 5px black;
+    border-top: 0px;
+    border-right: 0px;
+    border-radius: 5px;
+    height: 0px;
+    width: 0px;
+    margin-top: 430px;
+    padding: 15px;
+    rotate: 45deg;
+
+
+}
+
+
+.arrow-right {
+    border: solid 5px black;
+    border-radius: 5px;
+    border-bottom: 0px;
+    border-left: 0px;
+    height: 0px;
+    width: 0px;
+    margin-top: 430px;
+    padding: 15px;
+    rotate: 45deg;
+
+}
+
 .boxes {
     display: flex;
     justify-content: space-between;
     height: 50px;
     margin-top: 100px;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 .one{
