--- a/profiles.css
+++ b/profiles.css
@@ -15,6 +15,13 @@ body {
     position: absolute;
 }
 
+.name {
+    margin-left: 40vw;
+    margin-top: 5vh;
+    font-family: 'bergen_sansregular';
+    font-weight: 400;
+}
+
 .redadjust{
     height: 300px;
     z-index: 0;
@@ -57,8 +64,8 @@ body {
 .yellow-flower{
     height: 5px;
     margin-top: 870px;
-    margin-left: 60px;
     display: flex;
+    margin-left: 100px;
 }
 
 .yellow-flower-adjust {
@@ -74,7 +81,8 @@ body {
     margin-left: 100px;
     display: flex;
     justify-content: space-between;
-    padding: 2px
+    padding: 2px;
+    width: 0px;
 }
 
 .arrow-left {
@@ -92,8 +100,12 @@ body {
 }
 
 .adjust-lines{
-    margin-top: 140px;
+    margin-top: 16px;
     rotate: 20deg;
+    width: 0px;
+    margin-top: 90px;
+   
+    
     
 }
 
@@ -115,11 +127,18 @@ body {
 
 }
 
+.gallary-container {
+    margin-top: 0px;
+    display: flex;
+    margin-left: 15vh;
+}
+
 .boxes {
     display: flex;
     justify-content: space-between;
     height: 50px;
     margin-top: 200px;
+   
     
 }
 
